test_suite5/ALAN/test_suite/alan-2022-examples/failing/002800_mutation.alan
source fU begin citQa call Zk1() := 49 end
